fix logic on borders